--- a/step.yml
+++ b/step.yml
@@ -1,43 +1,71 @@
+#
+# A couple of useful guides & docs:
+#
+# - Main Bitrise CLI docs: https://github.com/bitrise-io/bitrise/tree/master/_docs
+# - Step Development Guideline: https://github.com/bitrise-io/bitrise/blob/master/_docs/step-development-guideline.md
+# - Bitrise.yml format spec: https://github.com/bitrise-io/bitrise/blob/master/_docs/bitrise-yml-format-spec.md
+# - Bitrise docs: http://devcenter.bitrise.io/
+# - Bitrise CLI guides: http://devcenter.bitrise.io/bitrise-cli/
 
-title: jamf-upload
+title: |-
+  Jamf Upload
 summary: |
-  Upload APK/IPA files to Jamf Cloud Distribution
+   Upload APK/IPA files to Jamf Cloud Distribution
 description: |
-  Upload your build files to Jamf Cloud Distribution for MDM device deployment.
+    Upload your build files to Jamf Cloud Distribution for MDM device deployment.
 website: https://github.com/DrivingThru/bitrise-step-jamf-upload
 source_code_url: https://github.com/DrivingThru/bitrise-step-jamf-upload
 support_url: https://github.com/DrivingThru/bitrise-step-jamf-upload/issues
-published_at: 2022-07-01T19:01:57.318895784+02:00
-source:
-  git: https://github.com/DrivingThru/bitrise-step-jamf-upload.git
-  commit: 0bec1d9e2e81a58bdd45cb0dda0f15f0c852585e
-host_os_tags:
-  - osx-10.10
-project_type_tags:
-  - ios
-  - android
-  - xamarin
-  - react-native
-  - cordova
-  - ionic
+
+# If this step should be available only for certain project types
+# just uncomment this `project_type_tags` section and include all the
+# project types supported by the step. If the step can be used for all
+# project types then you can just remove this section.
+# If no `project_type_tags` specified (or specified as an empty array)
+# that means the step can be used for any project type.
+# You can find more information about project type tags in the Step Development Guideline:
+# https://github.com/bitrise-io/bitrise/blob/master/_docs/step-development-guideline.md
+#
+# project_type_tags:
+#   - ios
+#   - macos
+#   - android
+#   - xamarin
+#   - react-native
+#   - cordova
+#   - ionic
+#   - flutter
+
+# Type tags are used for categorizing steps, for easier step discovery in Step Libraries.
+# You can find more information about type tags in the Step Development Guideline:
+# https://github.com/bitrise-io/bitrise/blob/master/_docs/step-development-guideline.md
 type_tags:
-  - test
+  - deploy
+
+# These properties define whether a Step is run in a given Workflow or not.
+# You can find more information about this in the documentation here:
+# https://devcenter.bitrise.io/en/steps-and-workflows/developing-your-own-bitrise-step/developing-a-new-step.html#setting-conditions-for-running-the-step
+#
+# is_always_run: false
+# is_skippable: false
+# run_if: ""
+
+# Use the `deps` property to declare dependencies that you can fetch from an OS dependency manager.
+# You can find more information about this in the documentation here:
+# https://devcenter.bitrise.io/en/steps-and-workflows/developing-your-own-bitrise-step/developing-a-new-step.html#submodules-and-step-dependencies
+#
+# deps:
+#   brew:
+#   - name: cmake
+#   apt_get:
+#   - name: cmake
+
+
 toolkit:
   bash:
     entry_file: step.sh
-deps:
-  brew:
-    - name: git
-    - name: wget
-    - name: jq
-  apt_get:
-    - name: git
-    - name: wget
-    - name: jq
-is_requires_admin_user: true
-is_always_run: false
-is_skippable: false
-run_if: ""
+
+
 inputs:
   - opts:
       description: |
@@ -48,6 +76,7 @@ inputs:
         or $BITRISE\_IPA\_PATH
       title: A Bitrise generated APK or IPA path
     upload_path: $BITRISE_APK_PATH
+ 
   - jamf_username: $JAMF_USERNAME
     opts:
       description: |
@@ -56,6 +85,7 @@ inputs:
       is_sensitive: true
       summary: Your Jamf username
       title: Jamf username
+  
   - jamf_password: $JAMF_PASSWORD
     opts:
       description: |
@@ -64,20 +94,22 @@ inputs:
       is_sensitive: true
       summary: Your Jamf password
       title: Jamf password
+ 
   - jamf_app_id: $JAMF_APP_ID
-     description: |
+    opts:
+      description: |
         The Jamf ID of your IPA/APK
       is_required: true
       is_sensitive: true
-    opts:
       summary: Jamf app ID
       title: Jamf app ID
+  
   - jamf_server_name: $JAMF_SERVER_NAME
-     description: |
-        The server name you use to access your Jamf instance usch as https://yourserver.jamf.com
+    opts:
+      description: |
+        The server name you use to access your Jamf instance such as https://yourserver.jamf.com
       is_required: true
       is_sensitive: true
-    opts:
       summary: Jamf Server Name
       title: Jamf Server Name
 
